# anki_tools

./: .gitignore  README.md  pyproject.toml
anki_tools/: card_builder.py  collection_processor.py
anki_tools/entrypoints/: main.py  partial_learn.py
anki_tools/enums/: anki_enums.py
anki_tools/functions/: card_builder.py  collection_processor.py  scrape_anki.py  tag_partial_learn.py
anki_tools/utils/: japanese.py
automation/: input.csv  query_apple_dictionary.py  sentences.csv  utils.py
automation/data/: audio_id.json  previous_reviews.csv  words_database.csv
automation/enums/: automation_enum.py
card_templates/: custom_scheduling.js  custom_scheduling2.js  skip_steps.js
card_templates/french/: french.html
card_templates/japanese/: card_english_back.html  card_english_front.html  card_japanese_back.html  card_japanese_front.html  kanji_back.html  kanji_front.html  temp.html
card_templates/japanese/kanji/: current.html  recall.html  template.html
card_templates/swedish/: english_back.html
info/: audio_id.txt  automator_scripts.txt  card_help.txt  collection_help.txt  deck_help.txt  note_help.txt  scheduler_help.txt
legacy/: meaning.py
misc/: tag_partial_learn.py
